apps/lab-home/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lab-home
  namespace: apps
spec:
  selector:
    app: lab-home
  ports:
    - port: 80
      targetPort: 80
